# ascend_openpose

./: CMakeLists.txt  README.md  main.cpp
AclProcess/: AclProcess.cpp  AclProcess.h  ModelProcess.cpp  openpose.cpp  openpose.h
model/: aipp_rgb.cfg
